--- a/webApp/build.gradle
+++ b/webApp/build.gradle
@@ -31,3 +31,13 @@ bootJar{
 
 	duplicatesStrategy(DuplicatesStrategy.FAIL)
 }
+
+tasks.named('jar') {
+	manifest {
+		attributes(
+				'Implementation-Title': project.name,
+				'Implementation-Version': project.version)
+	}
+}
+
+
